<resources>
    <string name="app_name">Projeto Movimenta</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Crie uma conta clicando aqui </string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="title_activity_tela_inicial">TelaInicial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_draw_open">open navigation drawer</string>
    <string name="navigation_draw_close">close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txt_peso">Peso(kg)</string>
    <string name="txt_altura"> Altura(m)</string>
    <string name="BtnCalcular">Calcular</string>
    <string name="BtnLimpar">Limpar</string>
    <string name="txt_tabela_interpretação">Interpretação IMC</string>
    <string name="txt_resultado">Seu Imc: </string>
    <string name="txt_classificacao">Classificação IMC</string>
    <string name="txt_titulo_app">Calcúlo de IMC</string>
    <string name="idTabelaImc">ID da Tabela IMC</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et metus eu massa fermentum mattis. Nullam viverra ex eu neque hendrerit, a sollicitudin augue venenatis. Vestibulum ac fringilla purus. Suspendisse vitae quam eu nunc gravida dignissim a non quam. Quisque pellentesque quam sit amet libero dapibus, ac cursus erat scelerisque. Nunc mattis quis elit non dictum. Fusce accumsan laoreet turpis eget elementum. Aenean malesuada vestibulum ex vel convallis. Integer in risus at elit cursus imperdiet. Integer egestas nunc a tempus dictum. Nulla ut fringilla ex. Nullam sagittis est vel odio dignissim, ac semper elit semper. Nullam sed lacus eget sem fringilla mattis. In vulputate eget arcu vel accumsan.
    <string name="regiao_barreiro">Região Barreiro</string>

    </string>
</resources>